# strompreis-optimierer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.js  vitest.config.js
backend/: .gitignore  Dockerfile  docker-compose.yml
backend/optimizer/: pyproject.toml
backend/optimizer/electricity_price_optimizer/: Cargo.toml
backend/optimizer/python/electricity_price_optimizer_py/: __init__.py  __init__.pyi
backend/optimizer/src/: battery.rs  lib.rs  prognoses.rs
optimizer/: Cargo.toml  README.md
optimizer/electricity_price_optimizer/src/: lib.rs  schedule.rs
optimizer/electricity_price_optimizer/src/algorithm/: mod.rs
optimizer/electricity_price_optimizer/src/optimizer/: mod.rs
optimizer/electricity_price_optimizer/src/optimizer_context/: battery.rs  mod.rs
optimizer/electricity_price_optimizer/src/simulated_annealing/: mod.rs  state.rs
optimizer/electricity_price_optimizer/src/time/: mod.rs
optimizer/electricity_price_optimizer/src/utils/: stack_proxy.rs
optimizer/electricity_price_optimizer_new/: README.md
optimizer/electricity_price_optimizer_new/src/: lib.rs
optimizer/electricity_price_optimizer_new/src/optimizer_context/: prognoses.rs
optimizer/electricity_price_optimizer_new/src/time/: mod.rs
optimizer/electricity_price_optimizer_new/src/utils/: mod.rs
optimizer/python/electricity_price_optimizer_py/: __init__.pyi
optimizer/src/: action.rs  battery.rs  lib.rs  optimizer_context.rs  prognoses.rs  schedule.rs  simulated_annealing.rs  time_utils.rs  timeseries.rs  units.rs
(+282 files in other folders)
